--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+.item-mazo {
+    background-size: 120%;
+    background-position: center 25%;
+    background-repeat: no-repeat;
+    width: 100%;
+    font-weight: bold;
+    text-align: left;
+    padding-left: 5px;
+
+    text-shadow:
+        0 0 5px #000,
+        0 0 10px #000,
+        0 0 15px #000,
+        0 0 20px #000;
+}
